update from 4/19/24 class

--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -5,6 +5,9 @@
         </button>
   
         <a mat-flat-button color="primary" [routerLink]="['/countries']">Countries</a>
+        
         <span class="separator"></span>
+
+        <a mat-flat-button color="primary" [routerLink]="['/login']">Login</a>
     </mat-toolbar>
   </header> 
