--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -7,7 +7,13 @@
         <a mat-flat-button color="primary" [routerLink]="['/countries']">Countries</a>
         
         <span class="separator"></span>
+        @if(isLoggedIn){
+          <a mat-flat-button color="primary" (click)="onLogout()">Logout</a>
+        }
 
-        <a mat-flat-button color="primary" [routerLink]="['/login']">Login</a>
+        @else{
+          <a mat-flat-button color="primary" [routerLink]="['/login']">Login</a>
+        }
+        
     </mat-toolbar>
   </header> 
